Adding changes in method to test TDD